[package]
name = "mini-log-viewer"
version = "1.0.1"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "Mini Log Viewer"
documentation = "https://docs.rs/mini-log-viewer"
readme = "README.md"
homepage = "https://github.com/ewpratten/mlv"
repository = "https://github.com/ewpratten/mlv"
license = "GPL-3.0"
keywords = ["logs", "log-viewer"]
categories = ["development-tools", "visualization"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
eframe = "0.27.2"
egui_extras = "0.27.2"
fern = "0.6.2"
log = "0.4.21"
csv = "1.3.0"
chrono = "0.4.37"

[[bin]]
name = "mlv"
path = "src/main.rs"
